reservation-web/deployment/openshift/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: caj-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caj-web
  template:
    metadata:
      labels:
        app: caj-web
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: web-config
            defaultMode: 420
      containers:
        - name: caj-web
          image: 'docker.io/d0ck3rj3ff/caj-web:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: config-volume
              mountPath: /opt/app-root/src/assets/config.json
              subPath: config.json
