reservation-web/deployment/openshift/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: caj-web
spec:
  selector:
    app: caj-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
